--- a/FetoTech/FeroTech.Web/Views/Shared/_Layout.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Shared/_Layout.cshtml
@@ -76,11 +76,14 @@
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <i class="fa fa-sign-out"></i>
-                    <span>Logout</span>
-                </a>
+                <form method="post" asp-area="Identity" asp-page="/Account/Logout" id="logoutForm" class="m-0 p-0">
+                    <button type="button" id="logoutButton" class="btn btn-link nav-link text-start w-100" style="color: inherit; text-decoration: none;">
+                        <i class="fa fa-sign-out"></i>
+                        <span>Logout</span>
+                    </button>
+                </form>
             </li>
+
         </ul>
     </nav>
 
@@ -158,6 +161,23 @@
             // Initial load and set interval
             loadNotificationCount();
             setInterval(loadNotificationCount, 10000);
+        });
+            $(document).ready(function () {
+            $("#logoutButton").click(function () {
+                Swal.fire({
+                    title: "Are you sure?",
+                    text: "You’ll be logged out of your account.",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes, logout"
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $("#logoutForm").submit(); 
+                    }
+                });
+            });
         });
     </script>
 
